# papertrail-downloader

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cli.rs  main.rs
