[package]
name = "papertrail-downloader"
version = "0.2.0"
description = "Papertrail parallel log archives downloader"
authors = ["ndelvalle <nicolas.delvalle@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ndelvalle/papertrail-downloader"
repository = "https://github.com/ndelvalle/papertrail-downloader"

[dependencies]
chrono = "0.4.23"
clap = "2.34.0"
futures = "0.3.26"
reqwest = { version = "0.11.12", features = ["blocking"] }
shellexpand = "2.1.2"
indicatif = "0.16.0"
rayon = "1.7.0"
